Bug 447611 - Expert mode dialog immediately closes
Summary: Expert mode dialog immediately closes
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-28 19:50 UTC by afedotov861
Modified: 2022-01-11 18:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description afedotov861 2021-12-28 19:50:41 UTC
SUMMARY
When creating a key, "expert mode" button creates a window that immediately closes, making it impossible to use expert mode

STEPS TO REPRODUCE
1. Keys > Generate key pair...
2. Expert mode

SOFTWARE/OS VERSIONS
Linux: 5.15.11.arch2-1
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.12.2

I saw a similar bug #167766 reported in 2008, but I'm on a Linux system with konsole installed.
Comment 1 afedotov861 2021-12-28 20:32:44 UTC
I forgot to add, the key generation dialog itself closes outright after clicking the expert mode button as well.
Comment 2 Rolf Eike Beer 2022-01-07 12:40:30 UTC
This sounds like the subprocess exits with error, e.g. because it does not find the gnupg binary or something like that. Once you have started kgpg, could you please run the following command:

 strace -f -p $(pidof kgpg) -eexecve,exit_group

Then open the key generation dialog, click "Expert", and Ctrl-C strace once the dialog closes. Please paste the output here.
Comment 3 afedotov861 2022-01-09 01:36:22 UTC
thanks, here you go.

strace: Process 4405 attached with 11 threads
strace: Process 6682 attached
[pid  6682] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--list-config", "--with-colons"], 0x7ffd44d66778 /* 71 vars */) = 0
[pid  6682] exit_group(0)               = ?
[pid  6682] +++ exited with 0 +++
[pid  4405] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6682, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
strace: Process 6684 attached
[pid  6684] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--list-config", "--with-colons"], 0x7ffd44d66778 /* 71 vars */) = 0
[pid  6684] exit_group(0)               = ?
[pid  6684] +++ exited with 0 +++
[pid  4405] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6684, si_uid=1000, si_status=0, si_utime=0, si_stime=1} ---
strace: Process 6685 attached
[pid  6685] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--version"], 0x563bcb517b10 /* 1 var */) = 0
[pid  6685] exit_group(0)               = ?
[pid  6685] +++ exited with 0 +++
[pid  4405] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6685, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
strace: Process 6686 attached
[pid  6686] execve("/usr/bin/konsole", ["/usr/bin/konsole", "-e", "gpg --expert --full-gen-key--opt"...], 0x7ffd44d66778 /* 71 vars */) = 0
strace: Process 6687 attached
strace: Process 6688 attached
strace: Process 6689 attached
strace: Process 6690 attached
strace: Process 6691 attached
strace: Process 6692 attached
strace: Process 6693 attached
strace: Process 6694 attached
strace: Process 6695 attached
strace: Process 6696 attached
strace: Process 6697 attached
strace: Process 6698 attached
strace: Process 6699 attached
strace: Process 6700 attached
strace: Process 6701 attached
strace: Process 6704 attached
strace: Process 6705 attached
[pid  6705] execve("/usr/lib/utempter/utempter", ["/usr/lib/utempter/utempter", "add", ":0"], 0x7ffc39f1bbb8 /* 71 vars */) = 0
[pid  6705] exit_group(0)               = ?
[pid  6705] +++ exited with 0 +++
[pid  6704] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6705, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
[pid  6704] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--expert", "--full-gen-key--options", "/home/redacted/.gnupg/gpg.conf"], 0x5626fd8e3660 /* 82 vars */) = 0
[pid  6704] exit_group(2)               = ?
[pid  6704] +++ exited with 2 +++
[pid  6686] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6704, si_uid=1000, si_status=2, si_utime=0, si_stime=0} ---
strace: Process 6706 attached
[pid  6706] execve("/usr/lib/utempter/utempter", ["/usr/lib/utempter/utempter", "del"], 0x7ffc39f1bbb8 /* 71 vars */) = 0
[pid  6706] exit_group(0)               = ?
[pid  6706] +++ exited with 0 +++
[pid  6686] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6706, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
[pid  6697] +++ exited with 0 +++
[pid  6698] +++ exited with 0 +++
[pid  6696] +++ exited with 0 +++
[pid  6700] +++ exited with 0 +++
[pid  6701] +++ exited with 0 +++
[pid  6699] +++ exited with 0 +++
[pid  6687] +++ exited with 0 +++
[pid  6691] +++ exited with 0 +++
[pid  6695] +++ exited with 0 +++
[pid  6694] +++ exited with 0 +++
[pid  6693] +++ exited with 0 +++
[pid  6692] +++ exited with 0 +++
[pid  6690] +++ exited with 0 +++
[pid  6689] +++ exited with 0 +++
[pid  6688] +++ exited with 0 +++
[pid  6686] exit_group(0)               = ?
[pid  6686] +++ exited with 0 +++
[pid  4405] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6686, si_uid=1000, si_status=0, si_utime=32, si_stime=14} ---
strace: Process 6710 attached
[pid  6710] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--list-config", "--with-colons"], 0x7ffd44d66778 /* 71 vars */) = 0
[pid  6710] exit_group(0)               = ?
[pid  6710] +++ exited with 0 +++
[pid  4454] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6710, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
strace: Process 6711 attached
[pid  6711] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--with-colons", "--with-fingerprint", "--fixed-list-mode", "--list-keys", "--with-secret"], 0x7ffd44d66778 /* 71 vars */) = 0
[pid  6711] exit_group(0)               = ?
[pid  6711] +++ exited with 0 +++
[pid  4405] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6711, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
strace: Process 6713 attached
[pid  6713] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--with-colons", "--list-secret-keys", "--with-fingerprint", "--fixed-list-mode"], 0x7ffd44d66778 /* 71 vars */) = 0
[pid  6713] exit_group(0)               = ?
[pid  6713] +++ exited with 0 +++
[pid  4405] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6713, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
strace: Process 6715 attached
[pid  6715] execve("/usr/bin/gpg", ["/usr/bin/gpg", "--no-secmem-warning", "--no-tty", "--no-greeting", "--options", "/home/redacted/.gnupg/gpg.conf", "--debug-level", "none", "--list-config", "--with-colons"], 0x7ffd44d66778 /* 71 vars */) = 0
[pid  6715] exit_group(0)               = ?
[pid  6715] +++ exited with 0 +++
[pid  4454] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=6715, si_uid=1000, si_status=0, si_utime=0, si_stime=0} ---
strace: Process 4405 detached
strace: Process 4454 detached
strace: Process 4480 detached
strace: Process 4500 detached
strace: Process 4501 detached
strace: Process 4502 detached
strace: Process 4503 detached
strace: Process 4504 detached
strace: Process 4505 detached
strace: Process 4506 detached
strace: Process 4511 detached
Comment 4 Rolf Eike Beer 2022-01-11 18:45:54 UTC
Git commit 09b95f4d27b0475a0c8b937969125d31533317c2 by Rolf Eike Beer.
Committed on 11/01/2022 at 18:45.
Pushed by dakon into branch 'release/21.12'.

add missing space between gnupg arguments when generating key in expert mode

Fixes: 565b6c3173745019539278d3bb9c05e524b776c3
FIXED-IN: 21.12.2

M  +3    -3    keysmanager.cpp

https://invent.kde.org/utilities/kgpg/commit/09b95f4d27b0475a0c8b937969125d31533317c2