add missing space between gnupg arguments when generating key in expert mode

Fixes: 565b6c3173745019539278d3bb9c05e524b776c3
BUG: 447611
FIXED-IN: 21.12.2